Downgraded to Java 17 (My main host doesnt support J21 yet)